# odk-xform-to-json-schema

./: .gitignore  README.md  main.py  setup.cfg  setup.py
.trunk/: trunk.yaml
odk_xform_to_json_schema/: __init__.py  xform_to_json_schema.py
odk_xform_tools/: __init__.py
odk_xform_tools/flatten_odk_xform_select_choices/: flatten_xform_select_choices.py
odk_xform_tools/odk_xform_to_json_schema/: metadata_schema.py  xform_to_json_schema.py
