[metadata]
name = odk-xform-to-json-schema
version = attr: odk_xform_to_json_schema.__version__
description = Generate a JSON Schema from an ODK XForm Schema
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/onaio/odk-xform-to-json-schema
author = Ona Systems Inc
author_email = support@ona.io

[options]
packages = find:
install_requires =
    pyxform

[options.extras_require]
tests =
    pytest